updates to prevent selection of list items (preventing highlights etc)

--- a/lwc/lwcMultiSelectItem/lwcMultiSelectItem.html
+++ b/lwc/lwcMultiSelectItem/lwcMultiSelectItem.html
@@ -5,7 +5,7 @@
           <lightning-icon icon-name="utility:check" size="x-small" alternative-text="selected" class="slds-icon-utility-check slds-current-color slds-listbox__icon-selected slds-icon_container"></lightning-icon>
         </span>
         <span class="slds-media__body">
-          <span class="slds-truncate" title={label}>&nbsp;{label}</span>
+          <span class="slds-truncate no-selection" title={label}>&nbsp;{label}</span>
         </span>
       </div>
     </li>
