change to add custom pill container

--- a/lwc/lwcMultiSelect/lwcMultiSelect.html
+++ b/lwc/lwcMultiSelect/lwcMultiSelect.html
@@ -10,7 +10,7 @@
             <input type="text" class="slds-hide " id="combobox-input-1" autocomplete="off" role="textbox" >
             <div onclick={handleClick} class="slds-input slds-combobox__input" style="padding-left: .175rem;"
               id="combobox-div-1" aria-controls="listbox-id-1"  >{hintText}
-              <lightning-pill-container items={selectedPills} onitemremove={handlePillRemove} variant="bare"  ></lightning-pill-container>
+              <c-pill-container items={selectedPills} onitemremove={handlePillRemove}  ></c-pill-container>
             </div>
             <span class="slds-icon_container slds-icon-utility-down slds-input__icon slds-input__icon_right">
               <lightning-icon icon-name="utility:down" size="x-small" alternative-text="Approved"></lightning-icon>
