removed lwc prefix - lwc is now default

--- a/lwc/MultiSelect/MultiSelect.html
+++ b/lwc/MultiSelect/MultiSelect.html
@@ -19,11 +19,11 @@
           <div class={dropdownOuterStyle}  role="listbox">
             <ul class="slds-listbox slds-listbox_vertical" role="presentation">
               <template for:each={options_} for:item="option">
-                <c-lwc-multi-select-item key={option.key}
+                <c-multi-select-item key={option.key}
                                      value={option.value}
                                      label={option.label}
                                      selected={option.selected}
-                                     onselected={handleSelectedClick}></c-lwc-multi-select-item>
+                                     onselected={handleSelectedClick}></c-multi-select-item>
 
               </template>
             </ul>
